# src/main/resources/api/api.yaml
@@ -93,3 +93,18 @@ paths:
                 $ref: "./schemas/book.yaml"
         "404":
           description: The book was not found
+  /books/available:
+    get:
+      summary: Get all available books
+      description: Get all available books
+      operationId: getAllAvailableBooks
+      responses:
+        "200":
+          description: All Available books
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "./schemas/book.yaml"
+         
